DesignProject/tests/error/test05.src
// redeclaration
func test() -> void {
    local x : integer;
    local x : float;
    local y : integer;
    x := 10;
    y := 20;
    write(x);
}



